# analysis_suite

./: .gitignore  Readme.md  pyproject.toml  regenerate_all_plots.py  score_reference_set.py
config/: ampc_feature_analysis.yaml  ampc_full_comparison.yaml  curriculum_comparison.yaml  default_config.yaml  feature_comparison.yaml  prism_vs_diffsbdd_comparison.yaml
src/: __init__.py  cli.py  config.py
src/analysis/: __init__.py  chemical_space_analysis.py  feature_reward_analysis.py  molecular_properties_analysis.py  notebook.ipynb  posebusters_analysis.py  radar_analysis.py  ring_analysis.py  tanimoto_analysis.py  vina_analysis.py
src/analysis/rewards/: __init__.py  feature_density.py
src/utils/: __init__.py  alignment.py  centering.py  io.py  plotting.py  statistics.py
